--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Recent Updates
   <h2><i class="fa fa-bookmark"></i> Recent Updates</h2>
   <ul id="blog-posts" class="posts">
     {% for post in site.posts %}
-       <li> Hello </li>
+       <li><span>{{ post.date | date_to_string }} &raquo;</span>post.title</li>
     {% endfor %}
   </ul>
 </div>
