--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Yusuf Roohani
 ---
 
+{% include header.html %}
+
 <div id="home">
   <h2><i class="fa fa-bookmark"></i> Recent Updates</h2>
   <ul id="blog-posts" class="posts">
