--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Yusuf Roohani
 {% include header.html %}
 
 <div id="home">
-  <h2><i class="fa fa-bookmark"></i> Recent Updates</h2>
+  <h2><i class="fa fa-bookmark"></i> Updates</h2>
   <ul id="blog-posts" class="posts">
     {% for post in site.posts %}
        <li><span>{{ post.date | date_to_string }} &raquo;</span>{{post.content}}</li>
